<resources>
    <string name="app_name">WeatherApp</string>
    <string name="splash_screen">SPlash Screen</string>
    <string name="nombre_ciudad">Nombre ciudad</string>
    <string name="fecha_dispositivo">Fecha dispositivo</string>
    <string name="_27">27</string>
    <string name="_34_26">34/26</string>
    <string name="cloudy">Cloudy</string>
    <string name="_7_dias_reporte_del_clima">7 dias reporte del clima</string>
    <string name="detalles_del_clima">Detalles del clima</string>
    <string name="valor_temperatura">Valor Temperatura</string>
    <string name="temperatura">Temperatura</string>
    <string name="valor_visibilidad">Valor visibilidad</string>
    <string name="visibilidad">Visibilidad</string>
    <string name="valor_presi_n_aire">Valor presión aire</string>
    <string name="presi_n_aire">Presión aire</string>
    <string name="humedad">Humedad</string>
    <string name="valor_humedad">Valor humedad</string>
    <string name="direcci_n_viento">Dirección viento</string>
    <string name="valor_velocidad_viento">Valor velocidad viento</string>
    <string name="uv">Uv</string>
    <string name="valor_rayos_uv">Valor rayos uv</string>
    <string name="imagen_nube">Imagen nube</string>
    <string name="agregar_ciudad">Agregar ciudad</string>
    <string name="ingresa_ciudad">Ingresa ciudad</string>
    <string name="cargando_clima">Cargando clima</string>
    <string name="eliminar_ciudades">Eliminar ciudades</string>
    <string name="termometro">Termometro</string>
    <string name="presi_n">Presión</string>
    <string name="velocidadviento">VelocidadViento</string>
    <string name="velocidad">Velocidad</string>
    <string name="direccion_viento">Direccion viento</string>
    <string name="temp">Temp</string>
    <string name="dia_clima">Dia clima</string>
    <string name="dia_semana_clima">Dia semana clima</string>
    <string name="estado_clima">Estado clima</string>
    <string name="temperaturas">Temperaturas</string>
    <string name="ciudades_vacias">Ciudades vacias</string>
    <string name="debes_ingresar_una_ciudad_dame_click_para_consultar_una">Debes ingresar una ciudad , ¡ Dame click para consultar una !</string>
</resources>