<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/colorclimadia"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.informacionclima.InformacionClimaActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar_base" />

            <FrameLayout
                android:id="@+id/contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:id="@+id/nombreCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/nombre_ciudad"
            android:textSize="34sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_fecha_dipositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fecha_dispositivo"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/nombreCiudad"
            app:layout_constraintStart_toStartOf="@+id/nombreCiudad"
            app:layout_constraintTop_toBottomOf="@+id/nombreCiudad" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imagen_nube"
            app:layout_constraintEnd_toStartOf="@+id/tv_temperatura_ciudad"
            app:layout_constraintStart_toStartOf="@+id/tv_fecha_dipositivo"
            app:layout_constraintTop_toBottomOf="@+id/tv_fecha_dipositivo"
            app:srcCompat="@drawable/ic_cloud" />

        <TextView
            android:id="@+id/tv_temperatura_ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/_27"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_fecha_dipositivo"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_fecha_dipositivo" />

        <TextView
            android:id="@+id/tv_temperatura_max_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:text="@string/_34_26"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperatura_ciudad"
            app:drawableStartCompat="@drawable/ic_baseline_keyboard_arrow_up_24"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <TextView
            android:id="@+id/tv_estado_ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cloudy"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_temperatura_max_min"
            app:layout_constraintStart_toEndOf="@+id/tv_temperatura_max_min"
            app:layout_constraintTop_toTopOf="@+id/tv_temperatura_max_min" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_estado_ciudad" />

        <TextView
            android:id="@+id/tv_cantidad_dias_clima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_7_dias_reporte_del_clima"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/detalles_del_clima"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <include
            android:id="@+id/include"
            layout="@layout/grid_layout_detalle_clima"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

